--- a/myaccount.html
+++ b/myaccount.html
@@ -47,53 +47,40 @@
                </div>
             </div>
          </div>
+         <div class="header-bottom-offer">
+            <p>Home /My Account</p>
+         </div>
       </header>
-      <section>
-        <div class="banner">
-          <div class="banner-content"> 
-            <h2> YEEZY BOOST 350 V2 TRIPLE WHITE </h2>
-            <p> The most widespread release </p>
-            <a href=""> SHOP NOW </a>
-          </div>
-        </div>
-        <div class="shop-now">
-          <div class="content-one"> 
-            <div>
-              <p> CONTINENTAL 80 </p>
-              <a href=""> SHOP NOW </a>
+      <div class="container"> 
+         <div class="login-form">
+            <h2> LOGIN </h2>
+            <a class="forget" href="javascript:void(0)"> Forgot Your Password? </a>
+            <form> 
+               <input type="text" name="Email Address" value="Email Address">
+               <input type="text" name="Password" value="Password">
+            </form>
+            <div class="remember"> 
+               <p> Remember Me </p>
             </div>
-          </div>
-          <div class="content-two"> 
-            <div>
-              <p> SOCCER STREETSTYLE COLLECTION </p>
-              <a href=""> EXCLUSIVELY HERE </a>
+            <div class="buttons"> 
+               <a class="login" href=""> LOG IN <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </a>
+               <p> You can also log in with one of these accounts </p>
+               <a class="google" href=""> <i class="fa fa-google-plus" aria-hidden="true"></i> GOOGLE </a>
+               <a class="yahoo" href=""> <i class="fa fa-yahoo" aria-hidden="true"></i> YAHOO </a>
+               <a class="facebook" href=""> <i class="fa fa-facebook" aria-hidden="true"></i> FACEBOOK </a>
+               <a class="runtastic" href=""> RUNTASTIC </a>
             </div>
-          </div>
-        </div>
-      </section>
-      <section>
-        <div class="banner-two">
-          <div class="banner-two-content"> 
-            <h2> RACE-READY MINDSET </h2>
-            <p> Stay motivated to run outside with the latest looks from adidas Training. </p>
-            <a href=""> SHOP NOW </a>
-          </div>
-        </div>
-        <div class="shop-now shop-two">
-          <div class="content-one"> 
-            <div>
-              <p> ULTRABOOST </p>
-              <a href=""> SHOP NOW </a>
-            </div>
-          </div>
-          <div class="content-two"> 
-            <div>
-              <p> Congrats MVP. LINDSEY HORAN CREATES in X18 </p>
-              <a href=""> SHOP X </a>
-            </div>
-          </div>
-        </div> 
-      </section>
+         </div>
+         <div class="login-content"> 
+            <h2> CREATE AN ACCOUNT </h2>
+            <p style="margin-bottom: 30px;"> Enjoy the benefits of having an account, like: </p>
+            <p>  <i class="fa fa-check" aria-hidden="true"></i> Track & trace your order </p>
+            <p> <i class="fa fa-check" aria-hidden="true"></i>  A single sign in for adidas products and services </p>
+            <p> <i class="fa fa-check" aria-hidden="true"></i> Order history</p>
+            <p> <i class="fa fa-check" aria-hidden="true"></i> Faster checkout</p>
+            <a href=""> REGISTER <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </a>
+         </div>
+      </div>
       <footer>
          <div class="sign-up-section">
             <div class="container">
