Html update  Day end
Test

--- a/location-finder.html
+++ b/location-finder.html
@@ -47,92 +47,32 @@
                </div>
             </div>
          </div>
-         <div class="header-bottom-offer help">
-            <p>Home <span>/</span>My Account</p>
-         </div>
       </header>
-      <section class="help-bg">
+      <section class="store-location">
          <div class="container">
             <div class="row">
-               <h2>WHAT CAN  <br>I HELP YOU WITH?</h2>
-               <form class="form-sign-up">
-                     <input type="text" name="" placeholder="Your Email">
-                     <button type="submit"><i class="fa fa-arrow-right" aria-hidden="true"></i>
-                     </button>
-                  </form>
+               <div class="top-div">
+                  <div class="left-part-item">
+                     <h2>store locator</h2>
+                  </div>
+                  <div class="right-part-location">
+                     <h2>Find</h2>
+                     <select>
+                        <option>Stores</option>
+                        <option>Stores</option>
+                        <option>Stores</option>
+                     </select>
+                     <span>in</span>
+                     <form name="" class="search-map">
+                        <input type="text" name="" placeholder="COUNTRY  ?  CITY  ?  STATE  ?  ZIP" />
+                        <button><i class="fa fa-search"></i></button>
+                     </form>
+                  </div>
+               </div>
+               <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d14234.383324990702!2d75.74296344999999!3d26.884579249999998!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1537654591548" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
          </div>
       </section>
-      <div class="content container">
-         <div class="content-help">
-            <h2>MOST ASKED QUESTIONS</h2>
-            <ul class="list-help-bg">
-               <li><a href="javascript:void(0)">How do I return my products ?</a></li>
-               <li><a href="javascript:void(0)">How long does delivery take ?</a></li>
-               <li><a href="javascript:void(0)">Why doesn't my promotion code apply the correct discount to my order ?</a></li>
-               <li><a href="javascript:void(0)">How do I reset my account password ?</a></li>
-               <li><a href="javascript:void(0)">Why can't I find my order in my order history ?</a></li>
-               <li><a href="javascript:void(0)">What should I know about personalized gear ?</a></li>
-               <li><a href="javascript:void(0)">What should I know about mi adidas product ?</a></li>
-               <li><a href="javascript:void(0)">What are the terms and conditions ?</a></li>
-               <li><a href="javascript:void(0)">How do I create an account ?</a></li>
-               <li><a href="javascript:void(0)">How many days do I have to return my order ?</a></li>
-            </ul>
-            <h2>SUPPORT TOPICS</h2>
-            <div class="tabing">
-               <div class="tab">
-                    <button class="tablinks" onclick="openCity(event, 'account')"><img src="https://www.adidas.com/static/on/demandware.static/-/Sites-adidas-US-Library/en_US/dwcefa47c8/help_pages/ico-newsletter.png" alt="" /><span> Account & Membership</span></button>
-                    <button class="tablinks" onclick="openCity(event, 'Promotions')"><img src="https://www.adidas.com/static/on/demandware.static/-/Sites-adidas-US-Library/en_US/dwcefa47c8/help_pages/ico-newsletter.png" alt="" /> <span>Promotions & vouchers</span></button>
-                    <button class="tablinks" onclick="openCity(event, 'Returns')"><img src="https://www.adidas.com/static/on/demandware.static/-/Sites-adidas-US-Library/en_US/dwcefa47c8/help_pages/ico-newsletter.png" alt="" /> <span> Returns & Refunds</span></button>
-                  </div>
-                  <Div class="right-part">
-                  <div id="account" class="tabcontent">
-                   <ul>
-                     <li><a href="javascript:void(0)">What are the Creators Club terms and conditions?</a></li>
-                     <li><a href="javascript:void(0)">What are the Creators Club terms and conditions?</a></li>
-                     <li><a href="javascript:void(0)">What are the Creators Club terms and conditions?</a></li>
-                     <li><a href="javascript:void(0)">What are the Creators Club terms and conditions?</a></li>
-                     <li><a href="javascript:void(0)">What are the Creators Club terms and conditions?</a></li>
-                     <li><a href="javascript:void(0)">What are the Creators Club terms and conditions?</a></li>
-                  </ul>
-                  </div>
-
-                  <div id="Promotions" class="tabcontent">
-                    <ul>
-                     <li><a href="javascript:void(0)">What donations does the adidas Group make?</a></li>
-                     <li><a href="javascript:void(0)">Where can I find a site map?</a></li>
-                  </ul>
-                  </div>
-
-                  <div id="Returns" class="tabcontent">
-                    <ul>
-                     <li><a href="javascript:void(0)">What are the Creators Club terms and conditions?</a></li>
-                     <li><a href="javascript:void(0)">What are the Creators Club terms and conditions?</a></li>
-                     <li><a href="javascript:void(0)">What are the Creators Club terms and conditions?</a></li>
-                     <li><a href="javascript:void(0)">What are the Creators Club terms and conditions?</a></li>
-                     <li><a href="javascript:void(0)">What are the Creators Club terms and conditions?</a></li>
-                     <li><a href="javascript:void(0)">What are the Creators Club terms and conditions?</a></li>
-                  </ul>
-                  </div>
-                  </div>
-            </div>
-               <div class="login-redirct">
-                  <div class="left-part">
-                     <h2>WHERE IS MY ORDER?</h2>
-                     <p>Log in or use the Order Tracker to quickly track your order, start a return, and check the status of a refund.</p>
-                     <button>LOGIN</button>
-                     <button>order tracker and returns</button>
-                  </div>
-                  <div class="right-part">
-                     <h2>NO ANSWER TO YOUR QUESTION? <b>ASK OUR CUSTOMER CARE
-                         Online support open until 11pm today</b></h2>
-                         <h3> Online support open until 11pm today </h3>
-                         <small>8am-11pm EST 7 days a week.</small>
-                         <button>Customer Service</button>
-                  </div>
-               </div>
-         </div>   
-      </div>
       <footer>
          <div class="sign-up-section">
             <div class="container">
